--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Un reloj",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "node index.js"
   },
   "author": "furenku",
   "license": "ISC",
   "dependencies": {
     "moment": "^2.29.4"
+  },
+  "devDependencies": {
+    "jest": "^29.1.1"
   }
 }
